--- a/views/partials/navbar.pug
+++ b/views/partials/navbar.pug
@@ -1,25 +1,20 @@
 nav.navbar.navbar-expand-lg.navbar-light.bg-light
-  a.navbar-brand(href='#') Navbar
+  a.navbar-brand(href='../homepage') Home
   button.navbar-toggler(type='button', data-toggle='collapse', data-target='#navbarSupportedContent', aria-controls='navbarSupportedContent', aria-expanded='false', aria-label='Toggle navigation')
     span.navbar-toggler-icon
   #navbarSupportedContent.collapse.navbar-collapse
     ul.navbar-nav.mr-auto
       li.nav-item.active
-        a.nav-link(href='#')
-          | Home 
+        a.nav-link(href='../aboutme')
+          | Aboutme 
           span.sr-only (current)
       li.nav-item
-        a.nav-link(href='#') Link
-      li.nav-item.dropdown
-        a#navbarDropdown.nav-link.dropdown-toggle(href='#', role='button', data-toggle='dropdown', aria-haspopup='true', aria-expanded='false')
-          | Dropdown
-        .dropdown-menu(aria-labelledby='navbarDropdown')
-          a.dropdown-item(href='#') Action
-          a.dropdown-item(href='#') Another action
-          .dropdown-divider
-          a.dropdown-item(href='#') Something else here
+        a.nav-link(href='../servicespage') Services
       li.nav-item
-        a.nav-link.disabled(href='#', tabindex='-1', aria-disabled='true') Disabled
+        a.nav-link(href='../projectpage') Projects
+      li.nav-item
+        li.nav-item
+        a.nav-link(href='../contactme') Contactme
     form.form-inline.my-2.my-lg-0
       input.form-control.mr-sm-2(type='search', placeholder='Search', aria-label='Search')
       button.btn.btn-outline-success.my-2.my-sm-0(type='submit') Search
