--- a/views/aboutme.pug
+++ b/views/aboutme.pug
@@ -1,7 +1,14 @@
 extends layout
 block content
+   
 
+  .background
+  .transbox
+    p Hi I am Shivam Malhotra. I am in second year of my Computer Program Analyst program. When I am free I love to watch netflix with hot coffee. My milestones is to get the advance diploma. After that get the job. Gain the relevant experience. Finally get the citizenship of Canada.
 
+    
   
-  h1 Hi I am Shivam Malhotra!!
+
+
+
   
