--- a/views/projectpage.pug
+++ b/views/projectpage.pug
@@ -1,4 +1,6 @@
 extends layout
 
 block content
-  h1 Check my recent projects!
+  h5 Check my recent projects!
+  .scrabble
+  img(src='/images/scrabble.jpg', alt='game')
