--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,24 +1,111 @@
 body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-
-}
-
-.a{
-  text-align: center
+  background-image: url('../images/Web-Design-1.jpg')
+ 
 }
 
 img{
  height: 200px;
-
+ padding-top: 70px;
 }
 
-h1{
-position: relative;
-bottom: 150px;
-text-align: right;
+
+#container {
+  margin: 20px;
+  width: 200px;
+  height: 200px;
 }
 
-a {
-  color: #00B7FF;
+h4{
+  font-size: 50px;
+  text-align: center
 }
+
+
+
+#nav {
+  position: fixed;
+  top: 0;
+  left: 0px;
+  background-color: grey;
+  width: 100%;
+  opacity: 0.6;
+  filter: alpha(opacity=60); /* For IE8 and earlier */
+  padding: 14px 16px;
+  
+}
+#nav ul {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+  
+}
+#nav ul li {
+  margin: 0;
+  padding: 0;
+  float: left;
+}
+#nav ul li a {
+  text-decoration: none;
+  padding: 10px 20px;
+  display: block;
+  color: #FFF;
+  text-align: center;
+  padding-left: 200px
+}
+
+.footer {
+   position: fixed;
+   left: 0;
+   bottom: 0;
+   width: 100%;
+   opacity: 0.6;
+   background-color: brown;
+   text-align: center;
+   }
+
+  
+
+.transbox {
+   
+   background-color: #ffffff;
+   border: 1px solid black;
+   opacity: 0.6;
+   filter: alpha(opacity=60); /* For IE8 and earlier */
+   position: fixed; /* or absolute */
+   top: 50%;
+   left: 50%;
+  /* bring your own prefixes */
+   transform: translate(-50%, -50%);
+   }
+.transbox p {
+   margin: 5%;
+   font-weight: bold;
+   color: #000000;
+   font-size: 30px
+   }
+
+  h1{
+    position: fixed; /* or absolute */
+   top: 50%;
+   left: 50%;
+   transform: translate(-50%, -50%);
+   text-emphasis-color: red;
+    text-align: center
+
+  } 
+
+  h2{
+    position: fixed; /* or absolute */
+    top: 56%;
+    left: 50%;
+   /* bring your own prefixes */
+    transform: translate(-50%, -50%);
+    text-align: center
+    
+  }
+
+  h3{
+    padding-top: 30px
+  }
