--- a/views/contactme.pug
+++ b/views/contactme.pug
@@ -1,26 +1,21 @@
 extends layout
 block content
 
- img(src='/images/shivam.jpg', alt='My Image')
- doctype html
- html
-  head
-    title= title
-  body
-    div.content
-      form(action='/contactme', method='post')
-        fieldset
-          p
-            input(type='text', name='name', size='30',  required='', placeholder='Name:')
-          p
-            input(type='text', name='contactNo', size='30', placeholder='Contact No.:')
-          p
-            input(type='text', name='email', size='30', required='', placeholder='Email:')
-          p
-            br
-            textarea(type='text', name='message',cols='37', rows='7', size='30', placeholder='Your message please')
-          p
-            input(name='submit', type='submit', value='Send', id='submit')
+ img(src='/images/shivamm.jpg', alt='My Image')
+ div.content
+ form(action='/contactme', method='post')
+ 
+ p
+ input(type='text', name='name', size='30',  required='', placeholder='Name:')
+ p
+ input(type='text', name='contactNo', size='30', placeholder='Contact No.:')
+ p  
+ input(type='text', name='email', size='30', required='', placeholder='Email:')
+ p
+ br
+ textarea(type='text', name='message',cols='37', rows='7', size='30', placeholder='Your message please')
+ p
+ input(name='submit', type='submit', value='Send', id='submit')
        
 
   
