--- a/views/homepage.pug
+++ b/views/homepage.pug
@@ -1,7 +1,9 @@
 extends layout
 
 block content
-
-  h1 Welcome To The Homepage!
+  
+  link(rel='stylesheet', href='https://www.w3schools.com/w3css/4/w3.css')
+  h1 Shivam Malhotra 
+  h2 Computer Programmer Analyst
  
   
