--- a/views/layout.pug
+++ b/views/layout.pug
@@ -2,11 +2,12 @@ doctype html
 html
   head
     title= title
-    link(rel='stylesheet', href='https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css', integrity='sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T', crossorigin='anonymous')
     link(rel='stylesheet', href='/stylesheets/style.css')
-  body
-   include ./partials/navbar
-   .jumbotron
+
+  
+    body
+    include ./partials/header
+    include ./partials/footer
     block content
 
   
