--- a/views/servicespage.pug
+++ b/views/servicespage.pug
@@ -1,4 +1,34 @@
 extends layout
 
 block content
-  h1 my services are:
+ 
+  style.
+    * {box-sizing: border-box}
+    .container {
+    width: 100%;
+    background-color: #ddd;
+    }
+    .skills {
+    text-align: right;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    color: white;
+    }
+    .java {width: 90%; background-color: #4CAF50;}
+    .APIs {width: 80%; background-color: #2196F3;}
+    .js {width: 65%; background-color: #f44336;}
+    .mysql {width: 60%; background-color: #808080;}
+
+  h4 My Skills
+  p JAVA
+  .container
+   .skills.java 90%
+  p APIs
+  .container
+   .skills.APIs 80%
+  p JavaScript
+  .container
+   .skills.js 65%
+  p mysql
+  .container
+   .skills.mysql 60%
