--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -3,13 +3,13 @@
     li
       a(href='../homepage') Home
     li
+      a(href='../projectpage') Projects
+    li
+      a(href='../servicespage') Skills
+    li
       a(href='../aboutme') About Me
     li
       a(href='../contactme') Contact Me
-    li
-      a(href='../projectpage') Projects
-    li
-      a(href='../servicespage') Services
 
 
     
