--- a/views/projectpage.pug
+++ b/views/projectpage.pug
@@ -3,4 +3,13 @@ extends layout
 block content
   h5 Check my recent projects!
   .scrabble
-  img(src='/images/scrabble.jpg', alt='game')
+  img(src='/images/tumblr_my2oc9do781shr736o1_400.gif', alt='game')
+  img(src='/images/tumblr_oaixsaM9XV1qz7t0xo1_540.gif',alt='game1', class='image1')
+  img(src='/images/tic_tac_toe_02.gif',alt='game2', class='image2')
+
+  
+  .desc  Scrabble Game Using Cool Concepts of OOP in Java. Check it out here: https://github.com/ShivamMalhotra0105/Scrabble-Game-Java 
+
+  .rps  Rock Paper Scissors Game Using Frond End Javascript. Check it out here: https://github.com/ShivamMalhotra0105/RPS_GAME_200394261
+
+  .tictactoe  Tic Tac Toe Game Using Web and Internet Fundamentals.
