--- a/views/projectpage.pug
+++ b/views/projectpage.pug
@@ -12,4 +12,4 @@ block content
 
   .rps  Rock Paper Scissors Game Using Frond End Javascript. Check it out here: https://github.com/ShivamMalhotra0105/RPS_GAME_200394261
 
-  .tictactoe  Tic Tac Toe Game Using Web and Internet Fundamentals.
+  .tictactoe  Tic Tac Toe Game Using Web and Internet Fundamentals.Check it out here:https://github.com/ShivamMalhotra0105/Tic_Tac_Toe
