--- a/views/servicespage.pug
+++ b/views/servicespage.pug
@@ -3,32 +3,36 @@ extends layout
 block content
  
   style.
-    * {box-sizing: border-box}
-    .container {
-    width: 100%;
-    background-color: #ddd;
-    }
-    .skills {
-    text-align: right;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    color: white;
-    }
-    .java {width: 90%; background-color: #4CAF50;}
-    .APIs {width: 80%; background-color: #2196F3;}
-    .js {width: 65%; background-color: #f44336;}
-    .mysql {width: 60%; background-color: #808080;}
+   
+
+   .skills {
+   text-align: right;
+   padding-top: 10px;
+   padding-bottom: 10px;
+   color: white;
+   }
+   .container {
+   width: 100%;
+   background-color: #ddd;
+   }
+   
+   * {box-sizing: border-box}
+
+    .java {width: 90%; background-color: orange;}
+    .APIs {width: 80%; background-color: blue;}
+    .js {width: 65%; background-color: green;}
+    .mysql {width: 60%; background-color: purple;}
 
   h4 My Skills
   p JAVA
   .container
-   .skills.java 90%
+   .skills.java 92%
   p APIs
   .container
-   .skills.APIs 80%
+   .skills.APIs 85%
   p JavaScript
   .container
-   .skills.js 65%
+   .skills.js 70%
   p mysql
   .container
-   .skills.mysql 60%
+   .skills.mysql 65%
