--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,7 +1,7 @@
 body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-  background-image: url('../images/Web-Design-1.jpg')
+  background-image: url('../images/Web-Design-1.jpg');
  
 }
 
@@ -31,7 +31,7 @@ h4{
   background-color: grey;
   width: 100%;
   opacity: 0.6;
-  filter: alpha(opacity=60); /* For IE8 and earlier */
+  filter: alpha(opacity=60); 
   padding: 14px 16px;
   
 }
@@ -48,7 +48,7 @@ h4{
 }
 #nav ul li a {
   text-decoration: none;
-  padding: 10px 20px;
+  padding: 10px 10px;
   display: block;
   color: #FFF;
   text-align: center;
@@ -60,9 +60,9 @@ h4{
    left: 0;
    bottom: 0;
    width: 100%;
-   opacity: 0.6;
    background-color: brown;
    text-align: center;
+   
    }
 
   
@@ -72,12 +72,11 @@ h4{
    background-color: #ffffff;
    border: 1px solid black;
    opacity: 0.6;
-   filter: alpha(opacity=60); /* For IE8 and earlier */
-   position: fixed; /* or absolute */
+   filter: alpha(opacity=60); 
+   position: fixed; 
    top: 50%;
    left: 50%;
-  /* bring your own prefixes */
-   transform: translate(-50%, -50%);
+   transform: translate(-6%, -10%);
    }
 .transbox p {
    margin: 5%;
@@ -87,7 +86,7 @@ h4{
    }
 
   h1{
-    position: fixed; /* or absolute */
+    position: fixed; 
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
@@ -97,10 +96,9 @@ h4{
   } 
 
   h2{
-    position: fixed; /* or absolute */
+    position: fixed; 
     top: 56%;
     left: 50%;
-   /* bring your own prefixes */
     transform: translate(-50%, -50%);
     text-align: center
     
@@ -113,6 +111,7 @@ h4{
   h5{
     font-size: 30px;
     text-align: center;
+    text-decoration: underline
   }
 
 
@@ -125,11 +124,10 @@ h4{
    background-color: #ffffff;
    border: 1px solid black;
    opacity: 0.6;
-   filter: alpha(opacity=60); /* For IE8 and earlier */
-   position: fixed; /* or absolute */
+   filter: alpha(opacity=60); 
+   position: fixed;
    top: 50%;
    left: 50%;
-  /* bring your own prefixes */
    transform: translate(-230%, 125%);
  }
 
@@ -147,8 +145,8 @@ h4{
    background-color: #ffffff;
    border: 1px solid black;
    opacity: 0.6;
-   filter: alpha(opacity=60); /* For IE8 and earlier */
-   position: fixed; /* or absolute */
+   filter: alpha(opacity=60); 
+   position: fixed; 
    top: 50%;
    left: 50%;
    transform: translate(-44%, 120%);
