--- a/views/aboutme.pug
+++ b/views/aboutme.pug
@@ -1,10 +1,14 @@
 extends layout
 block content
    
+  //-Linkdin
+  script(type='text/javascript', src='https://platform.linkedin.com/badges/js/profile.js', async='', defer='')
+  .LI-profile-badge(data-version='v1', data-size='medium', data-locale='en_US', data-type='vertical', data-theme='dark', data-vanity='shivam-malhotra-851674166')
+  a.LI-simple-link(href='https://ca.linkedin.com/in/shivam-malhotra-851674166?trk=profile-badge') 
 
-  .background
+
   .transbox
-    p Hi I am Shivam Malhotra. I am in second year of my Computer Program Analyst program. When I am free I love to watch netflix with hot coffee. My milestones is to get the advance diploma. After that get the job. Gain the relevant experience. Finally get the citizenship of Canada.
+    p  Shivam Malhotra is in second year of Computer Program Analyst program. When Shivam is free he love to watch netflix with hot coffee. Shivam's milestones is to get the advance diploma. After that get the job. Gain the relevant experience. Finally get the citizenship of Canada.
 
     
   
