--- a/views/partials/footer.pug
+++ b/views/partials/footer.pug
@@ -2,9 +2,8 @@
   p © 2019 Shivam Malhotra
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
-//-a.fa.fa-facebook(href='#')
-//-a.fa.fa-twitter(href='#')
-//-a.fa.fa-google(href='#')
-//-a.fa.fa-linkedin(href='#')
-
+  
+  a.fa.fa-facebook(href='https://www.facebook.com/shivam.malhotra.790693')
+  a.fa.fa-twitter(href='../aboutme')
+  a.fa.fa-google(href='../aboutme')
+  a.fa.fa-linkedin(href='https://ca.linkedin.com/in/shivam-malhotra-851674166?trk=profile-badge')
