--- a/views/partials/footer.pug
+++ b/views/partials/footer.pug
@@ -1,9 +1,15 @@
 .footer
   p © 2019 Shivam Malhotra
 
+
+  //-icons library
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   
+  //-for Facebook
   a.fa.fa-facebook(href='https://www.facebook.com/shivam.malhotra.790693')
-  a.fa.fa-twitter(href='../aboutme')
-  a.fa.fa-google(href='../aboutme')
+  //-for twitter
+  a.fa.fa-twitter(href='https://twitter.com/ShivamM33470600')
+  //-for google+
+  a.fa.fa-google(href='https://myaccount.google.com/?utm_source=sign_in_no_continue')
+  //-for linkdin
   a.fa.fa-linkedin(href='https://ca.linkedin.com/in/shivam-malhotra-851674166?trk=profile-badge')
