--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -31,7 +31,7 @@ h4{
   background-color: grey;
   width: 100%;
   opacity: 0.6;
-  filter: alpha(opacity=60); 
+  filter: alpha(opacity=60);  /*filters an image*/
   padding: 14px 16px;
   
 }
@@ -76,7 +76,7 @@ h4{
    position: fixed; 
    top: 50%;
    left: 50%;
-   transform: translate(-6%, -10%);
+   transform: translate(-6%, -10%); /*2d transition of the transparent box*/
    }
 .transbox p {
    margin: 5%;
