--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,3 +1,9 @@
+/* File Name: CSS DOCUMENT
+ Author Name: Shivam Malhotra
+ Website Name: Portfolio Site
+ File Description: To Style the Website */
+
+
 body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
