--- a/views/aboutme.pug
+++ b/views/aboutme.pug
@@ -1,3 +1,9 @@
+//- File Name: PUG DOCUMENT
+//- Author Name: Shivam Malhotra
+//- Website Name: Portfolio Site
+//- File Description: About Me
+
+
 extends layout
 block content
    
@@ -5,7 +11,7 @@ block content
   script(type='text/javascript', src='https://platform.linkedin.com/badges/js/profile.js', async='', defer='')
   .LI-profile-badge(data-version='v1', data-size='medium', data-locale='en_US', data-type='vertical', data-theme='dark', data-vanity='shivam-malhotra-851674166')
   a.LI-simple-link(href='https://ca.linkedin.com/in/shivam-malhotra-851674166?trk=profile-badge') 
-
+  //- 2019,LinkdIN, Linkdin Corporation, Retrieved from url:https://www.linkedin.com/badges/profile/create?vanityname=shivam-malhotra-851674166&trk=public_profile-settings_badge,Mountain View, City of California
 
   .transbox
     p  Shivam Malhotra is in second year of Computer Program Analyst program. When Shivam is free he love to watch netflix with hot coffee. Shivam's milestones is to get the advance diploma. After that get the job. Gain the relevant experience. Finally get the citizenship of Canada.
