--- a/views/partials/footer.pug
+++ b/views/partials/footer.pug
@@ -1,3 +1,11 @@
+//- File Name: PUG DOCUMENT
+//- Author Name: Shivam Malhotra
+//- Website Name: Portfolio Site
+//- File Description: Footer of the site
+
+
+
+
 .footer
   p © 2019 Shivam Malhotra
 
