--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -1,3 +1,8 @@
+//- File Name: PUG DOCUMENT
+//- Author Name: Shivam Malhotra
+//- Website Name: Portfolio Site
+//- File Description: Navigation Bar
+
 #nav
   ul
     li
