--- a/views/homepage.pug
+++ b/views/homepage.pug
@@ -1,3 +1,10 @@
+//- File Name: PUG DOCUMENT
+//- Author Name: Shivam Malhotra
+//- Website Name: Portfolio Site
+//- File Description: Homepage of the site
+
+
+
 extends layout
 
 block content
