--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -46,6 +46,12 @@
     color: white;
     transform: translate(2200%, -50%);
   }
+
+  .container {
+    transform: translate(0%, 60%);
+
+  }
+
   
   
 
