--- a/views/auth/login.pug
+++ b/views/auth/login.pug
@@ -1,3 +1,9 @@
+//- File Name: PUG DOCUMENT
+//- Author Name: Shivam Malhotra
+//- Website Name: Portfolio Site
+//- File Description: Login Page
+
+
 extends ../layout
 
 block content
