--- a/views/auth/register.pug
+++ b/views/auth/register.pug
@@ -1,8 +1,14 @@
+//- File Name: PUG DOCUMENT
+//- Author Name: Shivam Malhotra
+//- Website Name: Portfolio Site
+//- File Description: Registration Page
+
+
 extends ../layout
 
 block content
 	.container
-		h1 Register Form
+		h1 Registeration Form
 		form(method="post")
 			.form-group
 				label Username
