--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -16,5 +16,17 @@
     li
       a(href='../contactme') Contact Me
 
+    if userLoggedIn
+
+    li
+      a(href='../login') Logout
+
+
+    li
+      a(href='../login') Login
+
+    li
+      a(href='../register') Register      
+
 
     
